Adding new VehiclesView
Co-Authored-By: Tilman Holube <tilman@holube.de>